# hpchat

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  dl.sh  harborpoint_events.json  pyproject.toml  transcribe.py  transcribe.sh  transcribe2.sh  update.sh
hpchat/: cli.py  count_tokens.py  db.py  preprocess.py  runtime.py  sermon.py  sermon_tts.py  server.py  shell.py  text_to_speech.py
hpchat/static/css/: output.css
hpchat/templates/: header.html  index.html  sermon.html  sermon_bu.html
output/: August 11, 2024 ｜ Harbor Point 10AM-segment.json  August 11, 2024 ｜ Harbor Point 10AM-segment.srt  August 11, 2024 ｜ Harbor Point 10AM-segment.tsv  August 11, 2024 ｜ Harbor Point 10AM-segment.txt  August 11, 2024 ｜ Harbor Point 10AM-segment.vtt  June 16, 2024 ｜ Jeff Maguire ｜ Harbor Point Church-segment.mp4.txt  June 16, 2024 ｜ Jeff Maguire ｜ Harbor Point Church-segment.mp4.vtt  June 16, 2024 ｜ Jeff Maguire ｜ Harbor Point Church-segment.txt  homeword_segments.txt
sermons/: August 11, 2024 ｜ Harbor Point 10AM-segment.txt  October 19, 2024 ｜ Harbor Point 5PM-segment.txt  better_than_a_sandwich.txt  sermon_list.yaml  work_in_progress.txt
spiders/: README.md  crawl_all.py  download_events.py  get_mp3_url.py  test.sh
