[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hpchat"
version = "0.1.0"
description = "Harbor Point Chat Bot"
authors = [
    {name = "Mark Kockerbeck", email = "xeb@hey.com"},
]
requires-python = ">=3.12"
dependencies = [
    "llm",
    "pyfiglet",
    "psycopg2",
    "termcolor",
    "pyyaml",
    "fire",
    "flask",
    "flask_cors",
    "tiktoken",
    "simple-term-menu",
    "scrapy",
    "llm-claude-3",
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "tqdm>=4.64.0",
    "markdownify>=0.11.6",
    "selenium>=4.1.0",
    "webdriver-manager>=4.0.0",
    "undetected-chromedriver>=3.5.0",
]

[tool.setuptools]
packages = ["hpchat"]
